--- a/openhpi/trunk/docs/man/hpialarms.pod.1
+++ b/openhpi/trunk/docs/man/hpialarms.pod.1
@@ -8,7 +8,7 @@ hpialarms [-D -a -b -c -i -m -n -p -o -x]
 
 =head1 DESCRIPTION
 
-hpialarms walks the RPT (Resource Present Table) for resouces that have 
+hpialarms walks the RPT (Resource Presence Table) for resources that have 
 "Alarm Control" management instruments (SAHPI_CTRL_LED).
 
 If no domain is selected, hpialarms uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
@@ -18,24 +18,23 @@ If no domain is selected, hpialarms uses a session with the default domain. The 
 
 =over 2
 
- -D domain id  Select domain id
- -c1           sets Critical Alarm on
- -c0           sets Critical Alarm off
- -m1           sets Major Alarm on
- -m0           sets Major Alarm off
- -n1           sets Minor Alarm on
- -n0           sets Minor Alarm off
- -p1           sets Power Alarm on
- -p0           sets Power Alarm off
- -i5           sets Chassis ID on for 5 sec
- -i0           sets Chassis ID off
- -a1           sets Disk A fault on
- -a0           sets Disk A fault off
- -b1           sets Disk B fault on
- -b0           sets Disk B fault off
- -d[byte]      sets raw Alarm byte
- -o            sets all Alarms off
- -x            show eXtra debug messages
+(No Option) Display alarm states
+
+Help Options:
+  -h, --help             Show help options
+
+Application Options:
+  -c, --critical=1|0     Set critical alarm on|off
+  -m, --major=1|0        Set major alarm on|off
+  -n, --minor=1|0        Set minor alarm on|off
+  -a, --diska=1|0        Set diska alarm on|off
+  -b, --diskb=1|0        Set diskb alarm on|off
+  -p, --power=1|0        Set power alarm on|off
+  -i, --chassisid=n      Set chassis id on for n seconds
+  -o, --all              Set all alarms off
+  -D, --domain=nn        Select domain id nn
+  -X, --debug            Display debug messages
+
 
 =back
 
@@ -61,7 +60,7 @@ If no domain is selected, hpialarms uses a session with the default domain. The 
          hpidomain      hpigensimdata  hpireset       hpitop
          hpiel          hpiinv         hpisensor      hpitree
          hpievents      hpionIBMblade  hpisettime     hpiwdt
-         hpifan         hpipower       hpithres
+         hpifan         hpipower       hpithres       hpixml
          ohdomainlist   ohhandler      ohparam
 
 
