--- a/openhpi/trunk/docs/man/hpidomain.pod.1
+++ b/openhpi/trunk/docs/man/hpidomain.pod.1
@@ -5,13 +5,15 @@ It can also set the domain tag.
 
 =head1 SYNOPSIS 
 
-hpidomain [-D id] [-t tag] [-v -x]
+ hpidomain [-D id] [-t tttt] [-V -X -h]
+ hpidomain [--domain=id] [--tag=tttt] [--verbose] [--debug] [--help]
 
 =head1 DESCRIPTION
 
 hpidomain displays the domain info for the specified domain.
 If no domain is selected, hpidomain works with the default domain.
-In verbose mode, it walks the DRT and displays domaininfo for all directly related domains
+
+In verbose mode, it walks the DRT and displays domaininfo for all directly related domains.
 Option -t allows to change the domain tag.
 
 =over 2
