--- a/openhpi/trunk/docs/man/hpitop.pod.1
+++ b/openhpi/trunk/docs/man/hpitop.pod.1
@@ -5,7 +5,10 @@ hpitop - A openhpi sample application that displays highlevel topology for a man
 
 =head1 SYNOPSIS 
 
-hpitop [-D id] [-rscwiafd -n resource -x]
+ hpitop [-D nn] [-rscwiafd] [-n nn] [-x]
+ hpitop [--domain=nn] [--rpts] [--sensors] [--controls] [--watchdogs]
+        [--inventories] [--annunciators] [--fumis] [--dimis] 
+        [--resource=nn] [--debug]
 
 =head1 DESCRIPTION
 
