--- a/openhpi/trunk/docs/man/hpigensimdata.pod.1
+++ b/openhpi/trunk/docs/man/hpigensimdata.pod.1
@@ -4,25 +4,31 @@ hpigensimdata - A openhpi client application supplementing the dynamic simulator
 
 =head1 SYNOPSIS 
 
-hpidomain [-D domain_id] [-r res_id] [-f filename] [-m UPD|INIT]
+ hpigensimdata [-D nn] [-r res_id] [-f filename] [-m UPD|INIT] [-h]
+ hpigensimdata [--domain=nn] [--resource=res_id] [--file=filename] [--mode=UPD|INIT] [--help]
 
 =head1 DESCRIPTION
 
 hpigensimdata generates data for the dynamic simulator plugin by reading the current 
-configuration. 
+configuration. It will print all HPI information in a format that can be parsed by Dynamic
+Simulator plugin. To spare some encoding/decoding function, values of enums are 
+printed as int values instead of encode them to ASCII values and decode them afterwards.
+Since this client is primarily for the Dynamic Simulator, the output functions don't
+depend on the oh_.. - output function. Therefore they can be easily changed without 
+influence on other clients.
+
 Please refer to README and detailed documentation with the plugin.
+
 If no domain is selected, hpidomain works with the default domain.
 If no file name is specified, the data is displayed on console.
 
 =over 2
 
-        Usage: hpigensimdata [-option]
-
-                   -D domain_id  Select particular Domain
-                   -r res_id     Select particular resource id for an update file
-                   -f filename   Name of the file to be generated
-                   -m (UPD|INIT) Write update or initial file
-
+  -h, --help                Show help options
+  -r, --resource=res_id     Select particular resource id for an update file
+  -f, --file=filename       Name of the file to be generated
+  -m, --mode=UPD|INIT       Write update or initial file
+  -D, --domain=nn           Select domain id nn
 
 =back
 
@@ -32,7 +38,7 @@ If no file name is specified, the data is displayed on console.
          hpialarms      hpifan         hpireset       hpitop
          hpidomain      hpiinv         hpisensor      hpitree
          hpiel          hpionIBMblade  hpisettime     hpiwdt
-         hpievents      hpipower       hpithres
+         hpievents      hpipower       hpithres       hpixml
          ohdomainlist   ohhandler      ohparam
 
 
