more on 1493787 Update clients to use long options and uniform format clients hpisensor, hpisettime, hpithres and some fixes (warnings removed, typos)

--- a/openhpi/trunk/docs/man/hpialarms.pod.1
+++ b/openhpi/trunk/docs/man/hpialarms.pod.1
@@ -4,9 +4,9 @@ hpialarms - A openhpi sample application that shows "Alarm Control" management i
 
 =head1 SYNOPSIS 
 
- hpialarms [-D id][-a 1|0][-b 1|0][-c 1|0][-m 1|0][-n 1|0][-p 1|0][-i n][-o][-X]
+ hpialarms [-D id][-a 1|0][-b 1|0][-c 1|0][-m 1|0][-n 1|0][-p 1|0][-i n][-o][-X][-h]
  hpialarms [--domain=id][--diska=1|0][--diskb=1|0][--critical=1|0][--major=1|0]
-           [--minor=1|0][--power=1|0][--chassisid=n][--all][-debug]
+           [--minor=1|0][--power=1|0][--chassisid=n][--all][--debug][--help]
 
 =head1 DESCRIPTION
 
