--- a/openhpi/trunk/docs/man/hpiel.pod.1
+++ b/openhpi/trunk/docs/man/hpiel.pod.1
@@ -4,8 +4,8 @@ hpiel - An openhpi sample application that displays HPI event log entries.
 
 =head1 SYNOPSIS 
 
- hpiel [-D nn] [-d] [-e entitypath] [-c -p -r -x -v -h ]
- hpiel [--Domain=nn] [--del] [--entitypath="entitypath"] [--clear --resource --rdr --xml --verbose --help]
+ hpiel [-D nn] [-d] [-e entitypath] [-c -p -r -X -h ]
+ hpiel [--Domain=nn] [--del] [--entitypath="entitypath"] [--clear --resource --rdr --xml --debug --help]
 
 =head1 DESCRIPTION
 
