--- a/openhpi/trunk/docs/man/hpievents.pod.1
+++ b/openhpi/trunk/docs/man/hpievents.pod.1
@@ -4,7 +4,7 @@ hpievents - An openhpi sample application that polls for events.
 
 =head1 SYNOPSIS 
 
- hpievents [ -D <value> ] [ -t BLOCK|SAHPI_TIMEOUT_BLOCK|n ] [ -d -x -h ]
+ hpievents [ -D <value> ] [ -t BLOCK|SAHPI_TIMEOUT_BLOCK|n ] [ -d -X -h ]
  hpievents [--domain=nn] [--timeout=BLOCK|SAHPI_TIMEOUT_BLOCK|n ] [--discover] [--debug] [--help]
 
 =head1 DESCRIPTION
