--- a/openhpi/trunk/docs/man/hpifan.pod.1
+++ b/openhpi/trunk/docs/man/hpifan.pod.1
@@ -4,7 +4,7 @@ hpifan - An openhpi sample application that shows "Fan Control" management instr
 
 =head1 SYNOPSIS 
 
- hpifan [-D nn] [-h] [-s auto|nn] [X]
+ hpifan [-D nn] [-h] [-s auto|nn] [-X]
  hpifan [--domain=nn] [--help] [--speed=auto|nn] [--debug]
 
 =head1 DESCRIPTION
