--- a/openhpi/trunk/docs/man/hpiinv.pod.1
+++ b/openhpi/trunk/docs/man/hpiinv.pod.1
@@ -4,8 +4,8 @@ hpiinv - An openhpi sample application that shows resources' inventory records.
 
 =head1 SYNOPSIS 
 
- hpiinv [-D nn] [-V] [ -X] [-a tag]
- hpiinv [--domain=nn] [--verbose] [--debug] [--asset-tag=tag]
+ hpiinv [-D nn] [-V] [ -X] [-a tag] [-h]
+ hpiinv [--domain=nn] [--verbose] [--debug] [--asset-tag=tag] [--help]
 
 =head1 DESCRIPTION
 
