--- a/openhpi/trunk/docs/man/hpionIBMblade.pod.1
+++ b/openhpi/trunk/docs/man/hpionIBMblade.pod.1
@@ -4,8 +4,8 @@ hpionIBMblade - An openhpi sample application that shows how two (2) openhpi plu
 
 =head1 SYNOPSIS 
 
- hpionIBMblade [-D nn] [ -X ]
- hpionIBMblade [--domain nn] [ --debug ]
+ hpionIBMblade [-D nn] [ -X ] [ -h ]
+ hpionIBMblade [--domain nn] [--debug] [--help]
 
 
 =head1 DESCRIPTION
