--- a/openhpi/trunk/docs/man/hpipower.pod.1
+++ b/openhpi/trunk/docs/man/hpipower.pod.1
@@ -4,8 +4,8 @@ hpipower - This sample openhpi application exercises HPI Power Management APIs.
 
 =head1 SYNOPSIS 
 
- hpipower [ -D nn ] [ -d -p -r -u -x -h] [ -b n ]
- hpipower [--domain nn] [--power-down --power-up --reset --unattended --debug --help] [--blade n ]
+ hpipower [ -D nn ] [ -d -p -r -u -X -h] [ -b n ]
+ hpipower [--domain=nn] [--power-down --power-up --reset --unattended --debug --help] [--blade=n ]
 
 =head1 DESCRIPTION
 
