--- a/openhpi/trunk/docs/man/hpitop.pod.1
+++ b/openhpi/trunk/docs/man/hpitop.pod.1
@@ -5,10 +5,10 @@ hpitop - A openhpi sample application that displays highlevel topology for a man
 
 =head1 SYNOPSIS 
 
- hpitop [-D nn] [-rscwiafd] [-n nn] [-x]
+ hpitop [-D nn] [-rscwiafd] [-n nn] [-X] [-h]
  hpitop [--domain=nn] [--rpts] [--sensors] [--controls] [--watchdogs]
         [--inventories] [--annunciators] [--fumis] [--dimis] 
-        [--resource=nn] [--debug]
+        [--resource=nn] [--debug] [--help]
 
 =head1 DESCRIPTION
 
