--- a/openhpi/trunk/docs/man/hpitree.pod.1
+++ b/openhpi/trunk/docs/man/hpitree.pod.1
@@ -5,9 +5,9 @@ and resources' manamegement instruments (rdr's) data structures of the managed o
 
 =head1 SYNOPSIS 
 
- hpitree [-D nn] [-acdiorsw ] [-n nn] [-x]
+ hpitree [-D nn] [-acdiorsw ] [-n nn] [-x] [-h]
  hpitree [--domain=nn] [--all] [--controls] [--rdrs] [--inventories] [--rpts]
-         [--sensors] [--watchdogs] [--overview] [--resource=nn] [--debug]
+         [--sensors] [--watchdogs] [--overview] [--resource=nn] [--debug] [--help]
 
 =head1 DESCRIPTION
 
