--- a/openhpi/trunk/docs/man/hpisensor.pod.1
+++ b/openhpi/trunk/docs/man/hpisensor.pod.1
@@ -4,11 +4,13 @@
 
 =head1 SYNOPSIS 
 
-hpisensor [-D domain] [-t -r -x] [-e entitypath]
+ hpisensor [-D nn] [-t -r -s -X -h] [-E epath]
+ hpisensor [--domain=nn] [--threshold --range --eventstate --debug --help] [--entity-path="epath"]
 
 =head1 DESCRIPTION
 
-hpisensor displays sensor info for all resources with Sensor Capability .
+hpisensor displays sensor info for all resources with Sensor Capability.
+Option -E (entity-path) restricts the output on the specified entity-path.
 
 If no domain is selected, hpisensor uses a session with the default domain. The selected domain id must be configured via the openhpidclient.conf file specified in the environment.
 
@@ -17,12 +19,13 @@ If no domain is selected, hpisensor uses a session with the default domain. The 
 
 =over 2
 
- -D domain id    select Domain id
- -t              show Thresholds also
- -r              show Range values also
- -s              show EventState also
- -e entity path  limit to a single entity
- -x              show eXtra debug messages
+  -h, --help                    Show help options
+  -t, --threshold               Show Thresholds also
+  -r, --range                   Show Range values also
+  -s, --eventstate              Show EventState also
+  -D, --domain=nn               Select domain id nn
+  -X, --debug                   Display debug messages
+  -E, --entity-path="epath"     Use entity path epath
 
 =back
 
@@ -32,7 +35,7 @@ If no domain is selected, hpisensor uses a session with the default domain. The 
          hpialarms      hpifan         hpipower       hpitop
          hpidomain      hpigensimdata  hpireset       hpitree
          hpiel          hpiiinv        hpisettime     hpiwdt
-         hpievents      hpionIBMblade  hpithres
+         hpievents      hpionIBMblade  hpithres       hpixml
          ohdomainlist   ohhandler      ohparam
  
 
