Feature request #3129977 Command line options -4 and -6 for IPv4 and IPv6 implemented in openhpid.

--- a/openhpi/trunk/docs/man/openhpid.pod.8
+++ b/openhpi/trunk/docs/man/openhpid.pod.8
@@ -62,6 +62,18 @@ Sets the maximum number of connection threads. Default is unlimited.
 
 Display verbose messages
 
+=item -4
+
+The daemon will try to bind IPv4 socket.
+
+=item -6
+
+The daemon will try to bind IPv6 socket.
+
+=item -4 -6
+
+The daemon will try to bind IPv4 or IPv6 socket.
+
 =back
 
 =head1 ENVIRONMENTAL VARIABLES
